# JWTGuard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
apps/: conftest.py
apps/auth_jwt/: apps.py  authentication.py  exceptions.py  schema.py
apps/auth_jwt/api/: serializers.py  urls.py  views.py
apps/auth_jwt/management/commands/: init_demo_data.py  init_test_content.py  init_test_roles.py
apps/auth_jwt/services/: auth_service.py  jwt_service.py  redis_token_store.py  registration_service.py
apps/auth_jwt/tests/: test_authentication.py  test_login.py  test_logout.py  test_refresh.py  test_refresh_reuse.py  test_token_store.py
apps/content/: admin.py  apps.py  models.py
apps/content/api/: serializers.py  urls.py  views.py
apps/content/migrations/: 0001_initial.py  0002_alter_contentitem_options_alter_contentitem_table.py
apps/content/tests/: conftest.py  test_content_access.py
apps/users/: admin.py  apps.py  managers.py  models.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py
apps/users/tests/: test_registration.py
bruno/DjangoJWT/: bruno.json
bruno/DjangoJWT/Auth/: 03_Login_Role_1.bru  04_Profile.bru  05_Refresh.bru  07_Profile_After_Logout.bru
bruno/DjangoJWT/Content/: 02_Available_Content.bru  02_Login_For_Content_Test.bru  03_Available_Content.bru  03_Content_Detail.bru  04_Content_Detail.bru
bruno/DjangoJWT/Security/: 03_Reuse_Old_Refresh_Token.bru  04_Profile_After_Reuse.bru  05_Login_Again.bru  07_Profile_After_Logout_All.bru
bruno/DjangoJWT/environments/: local.bru
bruno/JWTGuard/: bruno.json
bruno/JWTGuard/Auth/: 01_Health.bru  02_Register_Role_1.bru  06_Logout.bru
bruno/JWTGuard/Content/: 01_Content_Health.bru
bruno/JWTGuard/Security/: 01_Login_For_Reuse_Test.bru  02_Refresh_First_Time.bru  06_Logout_All.bru
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docker/: entrypoint.sh  wait_for_services.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  BRUNO.md  DEVELOPMENT.md  JWT_FLOW.md  SECURITY_MODEL.md
scripts/: generate_jwt_keys.sh  verify_jwt_keys.sh
utils/: exception_handler.py  redis_client.py
