[project]
name = "django-jwt-redis-auth"
version = "0.1.0"
description = "Advanced JWT authentication example with Django, DRF, PyJWT, Redis sessions, refresh rotation, and token reuse detection."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "NikPACodes" }
]
dependencies = [
    "Django>=6.0,<6.1",
    "djangorestframework>=3.17,<3.18",
    "PyJWT[crypto]>=2.12,<3.0",
    "psycopg[binary]>=3.3,<4.0",
    "redis>=7.4,<8.0",
    "python-dotenv>=1.2,<1.3",
    "drf-spectacular>=0.29,<0.30",
]


[project.optional-dependencies]
dev = [
    "pytest>=9.0,<9.1",
    "pytest-django>=4.12,<4.13",
    "pytest-mock>=3.14,<3.15",
    "django-stubs>=6.0,<6.1",
    "django-stubs-ext>=6.0,<6.1",
    "djangorestframework-stubs>=3.16,<3.17",
    "types-PyYAML>=6.0,<7.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["apps"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]